# RayCastingProject

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml  test-builds.yml
assets/: config.json  map.txt  xmap.txt
assets/map_samples/: map.txt  simple_map.txt  ymap.txt
demo/: demoEntities.hpp
include/: dataManager.hpp  gameCore.hpp  gameGraphics.hpp  gameHandler.hpp  geometry.hpp  mapGenerator.hpp  pathFinder.hpp  utils.hpp
include/engine/: CMakeLists.txt  dataManager.hpp  gameCore.hpp  gameDataStructures.hpp  gameGraphics.hpp  gameInputs.hpp
include/utils/: mapGenerator.hpp  pathFinder.hpp  rendThreadPool.hpp  utils.hpp
libs/: CMakeLists.txt  dataManager.cpp  gameCore.cpp  gameGraphics.cpp  gameHandler.cpp  gameInputs.cpp  geometry.cpp  mapGenerator.cpp  pathFinder.cpp  rendThreadPool.cpp  utils.cpp
src/: demo.cpp  main.cpp
