add_library(gameCore gameCore.cpp)
add_library(utils utils.cpp)
add_library(gameGraphics gameGraphics.cpp)
add_library(mapGenerator mapGenerator.cpp)
add_library(pathFinder pathFinder.cpp)
add_library(gameHandler gameHandler.cpp)
add_library(dataManager dataManager.cpp)
add_library(gameInputs gameInputs.cpp)
add_library(rendThreadPool rendThreadPool.cpp)